Unit-testing Binary better.